# rttr

./: .gitignore  CLAUDE.md  CMakeLists.txt  msvc_build.bat
CMake/: 3rd_party_libs.cmake  config.cmake  rttr-config.cmake.in  utility.cmake
doc/: CMakeLists.txt
doc/md_pages/: building_install.md
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/benchmarks/bench_method/: CMakeLists.txt  bench_find_method.cpp  bench_invoke_method.cpp  bench_method.cpp
src/benchmarks/bench_rttr_cast/: CMakeLists.txt  benchmark_rttr_cast.cpp
src/benchmarks/bench_variant/: CMakeLists.txt  bench_variant_conversion.cpp  bench_variant_create.cpp
src/examples/: CMakeLists.txt
src/examples/json_serialization/: CMakeLists.txt  from_json.cpp  (+2 more)
src/examples/scripting/: CMakeLists.txt
src/rttr/: CMakeLists.txt  argument.h  array_range.h  constructor.cpp  constructor.h  destructor.cpp  destructor.h  enum_flags.h  enumeration.cpp  enumeration.h  instance.h  library.cpp  library.h  method.cpp  method.h  parameter_info.cpp  parameter_info.h  property.cpp  property.h  registration.h  rttr_cast.h  rttr_enable.h  string_view.h  type.cpp  type.h  type_list.h  variant.h  variant_associative_view.cpp  variant_associative_view.h  variant_sequential_view.cpp  variant_sequential_view.h  visitor.cpp  visitor.h
src/rttr/detail/base/: core_prerequisites.h
src/rttr/detail/comparison/: compare_array_equal.h  compare_array_equal_impl.h  compare_array_less.h  compare_array_less_impl.h  compare_equal.h  compare_equal_impl.h  compare_less.h  compare_less_impl.h
src/rttr/detail/constructor/: constructor_invoker.h  constructor_wrapper.h  constructor_wrapper_base.cpp  constructor_wrapper_base.h  constructor_wrapper_defaults.h
src/rttr/detail/conversion/: number_conversion.h
src/rttr/detail/default_arguments/: default_arguments.h  invoke_with_defaults.h
src/rttr/detail/destructor/: destructor_wrapper.h  destructor_wrapper_base.cpp  destructor_wrapper_base.h
src/rttr/detail/enumeration/: enumeration_wrapper.h  enumeration_wrapper_base.cpp  enumeration_wrapper_base.h
src/rttr/detail/filter/: filter_item_funcs.h
src/rttr/detail/impl/: argument_impl.h  array_range_impl.h  associative_mapper_impl.h  enum_flags_impl.h  instance_impl.h  rttr_cast_impl.h  sequential_mapper_impl.h  string_view_impl.h  wrapper_mapper_impl.h
src/rttr/detail/metadata/: metadata.h  metadata_handler.h
src/rttr/detail/method/: method_accessor.h  method_invoker.h  method_wrapper.h  method_wrapper_base.cpp  method_wrapper_base.h
src/rttr/detail/misc/: argument_extractor.h  flat_map.h  flat_multimap.h  function_traits.h  iterator_wrapper.h  misc_type_traits.h  register_wrapper_mapper_conversion.h  type_concepts.h  utility.h
src/rttr/detail/parameter_info/: parameter_info_wrapper.h  parameter_info_wrapper_base.cpp  parameter_info_wrapper_base.h  parameter_infos.h  parameter_infos_compare.h  parameter_names.h
src/rttr/detail/property/: property_wrapper_base.cpp  property_wrapper_base.h  property_wrapper_func.h  property_wrapper_member_func.h  property_wrapper_member_object.h  property_wrapper_object.h
src/rttr/detail/registration/: bind_impl.h  registration_impl.h  registration_manager.h  registration_state_saver.cpp  registration_state_saver.h
src/rttr/detail/type/: base_classes.h  type_data.cpp  type_data.h  type_impl.h  type_name.h  type_register.cpp  type_register.h  type_register_p.h  type_string_utils.h
src/rttr/detail/variant/: variant_compare.cpp  variant_data_converter.h  variant_data_policy.h  variant_impl.h
src/rttr/detail/variant_associative_view/: variant_associative_view_private.h
src/rttr/detail/variant_sequential_view/: variant_sequential_view_private.h
src/rttr/detail/visitor/: create_type_visitor_func.h  create_type_visitor_func_impl.h
src/unit_tests/: CMakeLists.txt  main.cpp
src/unit_tests/base_library/: CMakeLists.txt
src/unit_tests/constructor/: constructor_access_level_test.cpp  constructor_default_arg_test.cpp  constructor_invoke_test.cpp  constructor_misc_test.cpp  constructor_param_info_test.cpp  constructor_query_test.cpp  constructor_retrieve_test.cpp
src/unit_tests/destructor/: destructor_invoke_test.cpp  destructor_misc_test.cpp
src/unit_tests/enumeration/: enumeration_conversion.cpp  enumeration_misc.cpp
src/unit_tests/instance/: instance_test.cpp
src/unit_tests/method/: method_access_level_test.cpp  method_default_arg_test.cpp  method_invoke_defaults_test.cpp  method_invoke_test.cpp  method_misc_test.cpp  method_order_test.cpp  method_param_info_test.cpp  method_query_test.cpp  test_method_reflection.cpp  test_method_reflection.h
src/unit_tests/misc/: array_range_test.cpp  enum_flags_test.cpp  library_test.cpp  string_view_test.cpp  test_misc.cpp
src/unit_tests/plugin/: CMakeLists.txt
src/unit_tests/property/: property_access_level_test.cpp  property_class_inheritance.cpp  property_class_invoke_wrapper.cpp  property_global_function.cpp  property_global_object.cpp  property_member_function.cpp  property_member_object.cpp  property_misc_test.cpp  property_order_test.cpp
src/unit_tests/type/: test_type.cpp  test_type_names.cpp  type_prop_meth_invoke.cpp
src/unit_tests/variant/: variant_assign_test.cpp  variant_cast_test.cpp  variant_cmp_equal_test.cpp  variant_cmp_greater_or_equal.cpp  variant_cmp_greater_test.cpp  variant_cmp_less_or_equal.cpp  variant_cmp_less_test.cpp  variant_conv_test.cpp  variant_conv_to_bool.cpp  variant_conv_to_double.cpp  variant_conv_to_enum.cpp  variant_conv_to_float.cpp  variant_conv_to_int16.cpp  variant_conv_to_int32.cpp  variant_conv_to_int64.cpp  variant_conv_to_int8.cpp  variant_conv_to_string.cpp  variant_conv_to_uint16.cpp  variant_conv_to_uint32.cpp  variant_conv_to_uint64.cpp  variant_conv_to_uint8.cpp  variant_ctor_test.cpp  variant_misc_test.cpp
src/unit_tests/variant_array_view/: variant_array_view_test.cpp
src/unit_tests/variant_associative_view/: variant_associative_view_test.cpp
src/unit_tests/variant_sequential_view/: variant_sequential_view_test.cpp
src/unit_tests/visitor/: my_visitor.h  visitor_test.cpp
(+2 files in other folders)
